<resources>
    <string name="app_name">ZodiacApp</string>
    <string name="zodiac_name">Nama Anime</string>
    <string name="page_title">Zodiak</string>
    <string name="description">Deskripsi</string>
    <string name="range_date">Jangkauan Tanggal</string>
    <string name="about">Tentang</string>
    <string name="about_me">Tentang Saya</string>
    <string name="share">Bagi…</string>
    <string name="image_description">Foto Zodiak</string>
    <string name="share_data">Informasi Tentang Zodiac</string>
    <string name="share_to">Pilih Bagikan Ke</string>
    <string name="profile_name">Dhirsya Ramadhan Pattah</string>
    <string name="profile_email">ramadhandhirsya@gmail.com</string>
    <string name="display">Hasil</string>
    <string name="zodiac_sign">Lambang Zodiak</string>
    <string name="zodiac_date">Tanggal Zodiak</string>

    <string-array name="zodiac_name">
        <item>Capricorn</item>
        <item>Aquarius</item>
        <item>Pisces</item>
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpio</item>
        <item>Sagittarius</item>
    </string-array>

    <string-array name="zodiac_description">
        <item>Menurut mitologi Yunani, kambing dijadikan lambang zodiak Capricorn. Konon, ada seekor kambing bernama Amaltheus yang memberukan susunya kepada Dewa Zeus, sang dewa tertinggi bangsa Yunani kuno yang disembunyikan ibunya dalam sebuah gua karena takut dimangsa oleh bapaknya yang ganas. Oleh karena jasanya ini, kambing ini diangkat ke langit dan dibekali cahaya, maka jadilah bintang yang dikenal dengan Capricorn.</item>
        <item>Zodiak aquarius adalah zodiak yang memiliki lambang seorang laki-laki yang sedang menumpahkan air yang berasal dari akuarium yang sedang dibawa dan berelemen udara. Maka dari itu, seseorang yang berzodiak aquarius pasti orangnya mudah cair atau mudah bergaul dengan orang-orang baru, sehingga memiliki banyak teman. </item>
        <item>Zodiak pisces ini dilambangkan dengan lambang ikan. Hal ini ikan yang hidup di air akan lebih bebas, begitu juga dengan orang yang berzodiak pisces, ia akan merasa lebih tenang dan lebih cair atau mudah berkomunikasi dengan lingkungan yang sudah membuatnya nyaman. Jadi, ketika kamu memiliki seorang teman atau si “dia” zodiaknya pisces, maka sebisa mungkin buat dirinya merasa nyaman agar komunikasi yang dilakukan akan lebih lancar.</item>
        <item>Aries merupakan salah satu zodiak yang pertama dalam rasi bintang, dimana sangat terlihat sebagai cermin kepribadian menonjol dengan penuh semangat dan dipenuhi energi positif. Aries adalah bagian dari zodiak api yang dipengaruhi oleh planet Mars yang memiliki arti sifat pejuang, memiliki gairah dan aktif dalam berbagai hal apapun. Secara umum zodiak Aries adalah tokoh mitologi yang disimbolkan seekor domba jantan berbulu emas. Lambang tanduk emas pada Aries adalah domba, yang dimana terlihat kuat, keras, menyukai hal baru dan pantang menyerah.</item>
        <item>Pada umumnya, seseorang yang berada di bawah naungan zodiak Taurus adalah orang yang memiliki kepribadian setia, dapat diandalkan, lembut, penyayang, serta murah hati. Selain itu, Taurus adalah seseorang yang dikenal sabar, sangat bersahabat, dan mandiri. Akan tetapi, meskipun memiliki kepribadian yang sabar, seorang Taurus bisa menjadi sangat emosional apabila sedang marah dan dikenal cukup seram ketika marah.</item>
        <item>Zodiak yang identik dengan simbol kembar dan elemen udara. Gemini biasanya dikenal sebagai orang yang humoris serta banyak bicara. Akan tetapi ada juga yang menganggap mereka bermuka dua. Kepribadian yang cukup berlainan ini nyatanya tetap membuat Gemini cukup populer di lingkungan pergaulannya. Sifat umum lain dari seorang Gemini yang diamini banyak orang adalah senang bergosip. Bagi mereka gosip adalah sebuah keharusan, bahkan tak jarang melebih-lebihkan sesuatu.</item>
        <item>Simbol binatang dari zodiak cancer adalah kepiting dan secara simbol astrologis digambarkan dengan simbol seperti angka 69. Simbol 69 ini sering dianggap menggambarkan sekumpulan capit kepiting. Setiap tanda atau simbol zodiak dikaitkan dengan bagian-bagian tubuh tertentu. Simbol cancer dianggap sebagai representasi dada yang menggambarkan feminitas atau keibuan. Simbol kepiting juga menunjukkan sifat tertutup, pendiam, tetapi protektif.</item>
        <item>Beberapa sifat Leo yang menonjol adalah percaya diri, gagah, serta berani. Tak jauh dari sifat alami singa yang menjadi simbol mereka. Maka tak aneh jika mereka juga memiliki martabat yang tinggi dan tidak pernah berbuat curang ketika melakukan sesuatu. Meski sifat-sifat tersebut terkesan kaku, nyatanya seorang Leo bisa jadi penuh warna serta mengagumkan. Jangan heran jika kamu melihat Leo menjadi pusat perhatian di mana saja. Akan tetapi kadang-kadang mereka juga cukup gampang tersulut amarahnya.</item>
        <item>Dalam urutan zodiak, Virgo merupakan bintang yang berada pada urutan keenam dalam daftar zodiak. Zodiak Virgo biasanya dikenal sebagai seseorang yang perfeksionis sekaligus pekerja keras. Menurut laman Astrology.com, Virgo merupakan seseorang yang dilahirkan untuk mengabdi dan hal tersebut membuat seorang Virgo merasa senang. Virgo merupakan seseorang yang memiliki rasa tanggung jawab besar dan selalu memastikan bahwa pekerjaan yang mereka lakukan selalu berakhir baik.</item>
        <item>Orang-orang yang lahir dalam naungan zodiak Libra umumnya memiliki sisi yang lembut, hangat sekaligus mempesona. Mereka juga memiliki naluri yang cukup kuat serta sangat objektif ketika mengatasi suatu masalah. Libra dapat menjadi seorang penengah sekaligus pencari solusi yang adil, sesuai dengan lambangnya yaitu timbangan. Meskipun begitu, mereka juga adalah sosok yang terlalu polos dan sering kali kesulitan untuk menolak permintaan orang lain, hingga ia sering dimanfaatkan oleh orang lain.</item>
        <item>Kemisteriusan seorang Scorpio datang dari unsur planet Pluto yang dianggap sebagai lambang bagi hal-hal yang misterius. Di samping itu, zodiak ini memiliki elemen air yang membawa sifat kompleks ke dalam diri Scorpio. Alasannya karena emosi dan perasaan mempunyai pengaruh yang kuat ketika elemen air melakukan sebuah tindakan. Tak ayal orang lain akan kesusahan untuk menebak sikapnya. Secara umum, Scorpio adalah sosok yang terkenal pekerja keras, tekun, dan ambisius. Mereka juga senang membela kaum yang lebih lemah, rendah hati, serta dermawan. Ketika berkaitan dengan keyakinan, Scorpio sangat berpegang teguh pada peraturan dan nilai yang mereka yakini.</item>
        <item>agitarius adalah zodiak yang berelemen api dan dilambangkan dengan Dewa yang wujudnya menyerupai setengah manusia dan setengah kuda yang sedang memandang. Ke mana pun panah itu pergi, maka Dewa itu akan mengikutinya. Begitu juga, dengan para sagitarius yang selalu pergi sesuai keinginannya. Dalam hal ini, keinginan dapat diartikan sebagai bisa bebas ke mana saja, baik itu jalan-jalan atau travelling, bebas memilih karir atau pekerjaan, bebas memilih pasangan kekasih, dan sebagainya.</item>
    </string-array>

    <integer-array name="zodiac_photo">
        <item>@drawable/capricorn_logo</item>
        <item>@drawable/aquarius_logo</item>
        <item>@drawable/pisces_logo</item>
        <item>@drawable/aries_logo</item>
        <item>@drawable/taurus_logo</item>
        <item>@drawable/gemini_logo</item>
        <item>@drawable/cancer_logo</item>
        <item>@drawable/leo_logo</item>
        <item>@drawable/virgo_logo</item>
        <item>@drawable/libra_logo</item>
        <item>@drawable/scorpio_logo</item>
        <item>@drawable/sagittarius_logo</item>
    </integer-array>

    <string-array name="zodiac_range_birthdate">
        <item>Dec 22 - Jan 19</item>
        <item>Jan 20 - Feb 18</item>
        <item>Feb 19 - Mar 20</item>
        <item>Mar 21 - Apr 19</item>
        <item>Apr 20 - May 20</item>
        <item>May 21 - Jun 20</item>
        <item>Jun 21 - Jul 22</item>
        <item>Jul 23 - Aug 22</item>
        <item>Aug 23 - Sep 22</item>
        <item>Sep 23 - Oct 22</item>
        <item>Oct 23 - Nov 21</item>
        <item>Nov 22 - Dec 21</item>
    </string-array>

    <string-array name="lambang_zodiac">
        <item>Kambing</item>
        <item>Kendi atau Si Pembawa Air</item>
        <item>Dua Ikan</item>
        <item>Domba Jantan</item>
        <item>Banteng</item>
        <item>Si Kembar</item>
        <item>Kepiting</item>
        <item>Singa</item>
        <item>Gadis</item>
        <item>Timbangan</item>
        <item>Kalajengking</item>
        <item>Pemanah</item>
    </string-array>
</resources>