<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="235dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/about_me"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:contentDescription="@string/about_me"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="172dp"
        android:layout_height="172dp"
        android:layout_gravity="center"
        android:src="@drawable/dhirsya_profile"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/profile_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/profile_email"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>